# PROJET_C-

./: CMakeLists.txt  Findmariadbcpp.cmake  Makefile  README.md  cmake_install.cmake  main.cpp
backOffice/: backOffice.cpp  backOffice.h
bankingApp/: bankingApp.cpp  bankingApp.h
frontOffice/: user.cpp  user.h
include/db/: DatabaseManager.h
include/models/: AccountModel.h  TransactionModel.h  UserModel.h
include/queries/: APIQueries.h  AccountQueries.h  TransactionQueries.h  UserQueries.h
include/ui/: LoginView.h
include/ui/back_office/: AccountCreationView.h  AccountWireView.h  AllHistoricView.h  UserEditDialog.h  UserManagementView.h
include/ui/common/: Card.h  MainWindow.h
include/ui/front_office/: AccountView.h  HistoryView.h  HomeView.h  WireView.h
ressources/: ressources.qrc
src/: main.cpp
src/db/: DatabaseManager.cpp
src/models/: AccountModel.cpp  TransactionModel.cpp  UserModel.cpp
src/queries/: APIQueries.cpp  AccountQueries.cpp  TransactionQueries.cpp  UserQueries.cpp
src/ui/: LoginView.cpp
src/ui/back_office/: AccountCreationView.cpp  AccountWireView.cpp  AllHistoricView.cpp  UserEditDialog.cpp  UserManagementView.cpp
src/ui/common/: Card.cpp  MainWindow.cpp
src/ui/front_office/: AccountView.cpp  HistoryView.cpp  HomeView.cpp  WireView.cpp
